Add minimal scalar FEM pipeline with mesh loader and solver

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,15 @@
-add_executable(vectorem_scalar_demo scalar_demo.cpp)
+add_library(vectorem
+  mesh_gmsh.cpp
+  fem_scalar.cpp
+  solver.cpp
+  bc.cpp
+)
 
-target_include_directories(vectorem_scalar_demo PRIVATE ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(vectorem PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
-target_link_libraries(vectorem_scalar_demo PRIVATE Eigen3::Eigen)
+target_link_libraries(vectorem PUBLIC Eigen3::Eigen)
+
+add_executable(vectorem_scalar_demo main_scalar_demo.cpp)
+
+target_link_libraries(vectorem_scalar_demo PRIVATE vectorem)
+
