--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
           python-version: '3.11'
       - name: Install deps
         run: |
-          sudo apt-get update && sudo apt-get install -y cmake ninja-build clang-format clang-tidy
+          sudo apt-get update && sudo apt-get install -y cmake ninja-build clang-format clang-tidy libeigen3-dev
           python -m pip install -r tools/requirements.txt
       - name: Configure
         run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=Release
