--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,23 @@
 add_library(vectorem
   mesh_gmsh.cpp
-  fem_scalar.cpp
   solver.cpp
   bc.cpp
 )
+
+if (VECTOREM_BUILD_SCALAR)
+  target_sources(vectorem PRIVATE fem_scalar.cpp)
+endif()
+
+if (VECTOREM_BUILD_VECTOR)
+  target_sources(vectorem PRIVATE edge_basis.cpp assemble_maxwell.cpp)
+endif()
 
 target_include_directories(vectorem PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 target_link_libraries(vectorem PUBLIC Eigen3::Eigen)
 
-add_executable(vectorem_scalar_demo main_scalar_demo.cpp)
-
-target_link_libraries(vectorem_scalar_demo PRIVATE vectorem)
+if (VECTOREM_BUILD_SCALAR)
+  add_executable(vectorem_scalar_demo main_scalar_demo.cpp)
+  target_link_libraries(vectorem_scalar_demo PRIVATE vectorem)
+endif()
 
