Add port eigenmode and touchstone writer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ add_library(vectorem
   mesh_gmsh.cpp
   solver.cpp
   bc.cpp
+  ports/port_eigensolve.cpp
+  io/touchstone.cpp
 )
 
 if (VECTOREM_BUILD_SCALAR)
