Add PML support with stretched coordinates and tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,3 +12,8 @@ add_executable(test_ports test_ports.cpp)
 target_link_libraries(test_ports PRIVATE vectorem)
 add_test(NAME test_ports COMMAND test_ports)
 set_tests_properties(test_ports PROPERTIES WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
+add_executable(test_pml test_pml.cpp)
+target_link_libraries(test_pml PRIVATE vectorem)
+add_test(NAME test_pml COMMAND test_pml)
+set_tests_properties(test_pml PROPERTIES WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} LABELS pml)
